setup ForgetMe endpoint
