# server/Server/Routes/ActionRouter.cs
@@ -1,0 +1,34 @@
+namespace Server.Routes;
+
+using MediatR;
+using Microsoft.AspNetCore.Http.HttpResults;
+using Server.Context;
+using Server.Domain.Commands;
+
+public static class ActionRouter
+{
+    private static async Task<Results<Ok, ForbidHttpResult>> ForgetMe(
+        ForgetMeCommand command,
+        IMediator mediator,
+        IUserContext userContext,
+        CancellationToken cancellationToken
+    )
+    {
+        var userId = userContext.UserId;
+        if (userId is not { } && command.CustomerId != userId)
+        {
+            return TypedResults.Forbid();
+        }
+
+        await mediator.Send(command, cancellationToken);
+        return TypedResults.Ok();
+    }
+
+    public static RouteGroupBuilder MapActionEndpoints(this RouteGroupBuilder group)
+    {
+        group.WithTags("Actions");
+        group.MapPost("/forget-me", ForgetMe);
+
+        return group;
+    }
+}
